# agentgw

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  DOCUMENT_MANAGEMENT.md  Dockerfile  PRODUCTION_READY.md  README.md  SKILL_BASED_RAG.md  SUB_AGENT_ORCHESTRATION.md  V4_DAEMON_ARCHITECTURE.md  docker-compose.yml  pyproject.toml
config/: scheduled_jobs.yaml  settings.yaml  webhooks.yaml
deployment/: agentgw.service
examples/: document_management.md  per_skill_models.md  skill_based_rag.md  sub_agent_orchestration.md
skills/: _schema.yaml  code_assistant.yaml  general_assistant.yaml  project_manager.yaml  quick_assistant.yaml  summarize_document.yaml
src/agentgw/: __init__.py  __main__.py
src/agentgw/auth/: __init__.py  middleware.py
src/agentgw/core/: agent.py  config.py  planner.py  service.py  session.py  skill_loader.py  tool_registry.py
src/agentgw/db/: sqlite.py
src/agentgw/interfaces/: cli.py  cli_client.py  server.py
src/agentgw/llm/: anthropic_provider.py  base.py  openai_provider.py  types.py  xai_provider.py
src/agentgw/memory/: models.py  store.py
src/agentgw/rag/: chroma.py  ingestion.py
src/agentgw/scheduler/: __init__.py  cron.py
src/agentgw/tools/: decorator.py  delegation_tools.py  rag_tools.py  (+2 more)
tests/: conftest.py  test_agent.py  test_anthropic_provider.py  test_delegation.py  test_document_management.py  test_memory.py  test_model_selection.py  test_planner.py  test_rag_skill_filtering.py  test_scheduler.py  test_service.py  test_skill_loader.py  test_tool_registry.py  test_web.py  test_webhooks.py  test_xai_provider.py
(+10 files in other folders)
